# gdbm_s7

./: BUILD.bzl  MODULE.bazel  README.adoc  README.md
lib/: BUILD.bazel
lib/clibgen/: BUILD.bazel
src/: BUILD.bazel
test/: BUILD.bazel  BUILD.bzl  MODULE.bazel  gdbm_test.c
