load("@libs7//plugin:MACROS.bzl", "s7_plugin_test")
load("@rules_cc//cc:defs.bzl", "cc_test")
load("//config/cc:CONFIG.bzl",
     "BASE_COPTS", "BASE_LINKOPTS", "PROFILE")

DEPS          = [
    "//lib:gdbm_s7",
    "@gdbm//:libgdbm",
]
SRCS          = []
INCLUDE_PATHS = [
    "-Ilib",
    "-Itest",
]
COPTS         = BASE_COPTS + INCLUDE_PATHS
DEFINES       = ["LOCAL_REPO=\\\"{}\\\"".format(
    repository_name()[1:]
)]
LINKOPTS      = BASE_LINKOPTS
TIMEOUT = "short"
################################################################
test_suite(
    name  = "test",
    tests = [
        ":gdbm_s7_test"
    ]
)

s7_plugin_test(
    name = "gdbm_s7_test",
    # linkstatic = True,
    srcs = SRCS + ["gdbm_test.c"],
    # + select({
    #     # "//config/clibs/link:loadtime?": [
    #     # "//config/clibs/link:shared?": [
    #     #     "//lib/libgdbm:gdbm_s7.c"  # , "//lib/libgdbm:libgdbm_s7.h",
    #     # ],
    #     "//conditions:default": []
    # }),
    local_defines = DEFINES,
    deps = DEPS,
    # + select({
    #     "//config/clibs/link:archive?": [
    #         "@gdbm//:libgdbm"
    #         # "//lib/libgdbm:gdbm_s7"
    #     ],
    #     "//conditions:default": []
    # }),
    # data = select({
    #     "//config/clibs/link:runtime?": [
    #         "//lib/libgdbm:gdbm_s7"
    #     ],
    #     "//conditions:default": []
    # }),
    copts = COPTS,
    linkopts = LINKOPTS,
    timeout = TIMEOUT
)

# cc_test(
#     name = "gdbm_link_archive",
#     linkstatic = True,
#     srcs = SRCS + ["gdbm_test.c"],
#     local_defines = DEFINES,
#     deps = DEPS + ["//lib/libgdbm:gdbm_s7"],
#     copts = COPTS + [
#         "-I$(GENDIR)/lib/libgdbm",
#         "-I$(GENDIR)/external/libs7/lib/libgdbm",
#     ],
#     linkopts = LINKOPTS,
#     timeout = TIMEOUT
# )

# cc_test(
#     name = "gdbm_link_shared",
#     linkstatic = True,
#     srcs = SRCS + [
#         "gdbm_test.c",
#         # "//lib/libgdbm:gdbm_s7.c" ## , "//lib/libgdbm:libgdbm_s7.h",
#     ],
#     local_defines = DEFINES,
#     deps = DEPS + ["//lib/libgdbm:gdbm_s7"],
#     copts = COPTS + [
#         "-I$(GENDIR)/lib/libgdbm",
#         "-I$(GENDIR)/external/libs7/lib/libgdbm",
#     ],
#     linkopts = LINKOPTS,
#     timeout = TIMEOUT
# )

# cc_test(
#     name = "gdbm_link_runtime",
#     linkstatic = True,
#     srcs = SRCS + ["gdbm_test.c"],
#     local_defines = DEFINES + ["CLIBS_LINK_RUNTIME"],
#     deps = DEPS,
#     data = ["//lib/libgdbm:gdbm_s7"],
#     copts = COPTS + [
#         "-I$(GENDIR)/lib/libgdbm",
#         "-I$(GENDIR)/external/libs7/lib/libgdbm",
#     ],
#     linkopts = LINKOPTS,
#     timeout = TIMEOUT
# )

